<resources>
    <string name="app_name">WhatsApp</string>
    <string name="label_nome">Digite seu nome</string>
    <string name="label_login">Digite seu e-mail</string>
    <string name="label_senha">Digite sua senha</string>
    <string name="lbl_validacao">Validação</string>
    <string name="lbl_informacoes">Você recebeu um SMS para validação do seu número, digite o código de validação abaixo:</string>
    <string name="btn_validar">Validar</string>
    <string name="label_validador">Digite o código!</string>
    <string name="btn_logar">Logar</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="title_activity_cadastro_usuario">CadastroUsuarioActivity</string>
    <string name="texto_cadastro">Não tem conta? Cadastre-se</string>

    <string name="action_setting">Configuração</string>
    <string name="action_logout">Sair</string>
    <string name="action_pesquisa">Pesquisar</string>
    <string name="action_adicionar">Adicionar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_Conversa">Conversas</string>
    <string name="fragment_Contatos">Contatos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
