<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/menu_setting"
        android:orderInCategory="100"
        android:title="@string/action_setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/action_logout"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_pesquisar"
        android:title="@string/action_pesquisa"
        android:orderInCategory="300"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_adicionar"
        android:title="@string/action_adicionar"
        android:orderInCategory="400"
        android:icon="@drawable/ic_person_add"
        app:showAsAction="ifRoom"/>
</menu>
