<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    android:gravity="center_horizontal"
    android:layout_gravity="center_vertical"
    tools:context="br.com.firebase.whatsapp.activity.CadastroUsuarioActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="@dimen/larguraLogo"
        android:layout_height="@dimen/alturalogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/usuario"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edtCadastroNome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageLogo"
        android:layout_marginTop="24dp"
        android:hint="@string/label_nome"
        android:inputType="none"
        android:textColor="@color/textColorPrimary" />

    <EditText
        android:id="@+id/edtCadastroEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edtCadastroNome"
        android:layout_marginTop="20dp"
        android:hint="@string/label_login"
        android:inputType="none"
        android:textColor="@color/textColorPrimary" />

    <EditText
        android:id="@+id/edtCadastroSenha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtCadastroEmail"
        android:layout_marginTop="20dp"
        android:hint="@string/label_senha"
        android:inputType="textPassword"
        android:textColor="@color/textColorPrimary"/>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtCadastroSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/botaoPadrao"
        android:text="@string/btn_cadastrar" />

</RelativeLayout>
